--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -6,7 +6,7 @@
   </div>
   <nav class="nav-container">
     <a href="/">Home</a>
-    <a href="/res-resources">Resources</a>
+    <a href="/res-resources">Participate</a>
     <a href="/res-req">Research Request</a>
     <a href="/about-us">About Us</a>
     <a href="/faq">FAQ</a>
