--- a/public/css/res-resources.css
+++ b/public/css/res-resources.css
@@ -93,53 +93,53 @@
     flex-direction: column;
     gap: 1rem;
     width: 100%;
-  }
+}
 
 .research-card {
-  background-color: #555555;
-  padding: 1.5rem;
-  border-radius: 5px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: white;
+    background-color: #555555;
+    padding: 1.5rem;
+    border-radius: 5px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: white;
+    position: relative; /* Add this to make sure absolute positioning works inside this card */
 }
 
 .research-card h3 {
     margin-top: 0.9rem;
     margin-bottom: 1rem;
-  }
+}
 
-  .research-card p {
+.research-card p {
     margin-bottom: 1rem;
-  }
+}
 
-  .research-card .button-container {
+.research-card .button-container {
     display: flex;
     justify-content: flex-end;
     margin-top: auto;
-  }
+}
 
-
-  .research-card .button {
+.research-card .button {
     display: inline-block;
     background-color: #43B570;
     color: #FFFFFF;
     padding: 0.5rem 1rem;
     text-decoration: none;
     border-radius: 4px;
-  }
+}
 
 .type-part {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 0.9em;
-  color: #ffffff;
-  padding: 2px 5px;
-  background-color: #3587e6;
-  border-radius: 3px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 0.9em;
+    color: #ffffff;
+    padding: 5px 5px;
+    background-color: #3587e6;
+    border-radius: 3px;
 }
 
 .search-container {
@@ -206,19 +206,19 @@
 
 @media (max-width: 768px) {
     .wrapper {
-      padding: 15px;
+        padding: 15px;
     }
-  
+
     .research-summary h2 {
-      font-size: 1.5rem;
+        font-size: 1.5rem;
     }
-  
+
     .search-container {
-      flex-direction: column;
-      gap: 1rem;
+        flex-direction: column;
+        gap: 1rem;
     }
-  
+
     .research-card {
-      flex: 1 1 100%;
+        flex: 1 1 100%;
     }
-  }
+}
