--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -1,8 +1,11 @@
 <body>
+    <header2 class="header2">
+        <h1>Frequently Asked Questions</h1>
+    </header2>
+
     <main class="wrapper">
         <div class="container">
             <div class="faq">
-                <h1>Frequently Asked Questions</h1>
                 <div id="faq-content">
                     <!-- FAQs will be loaded here -->
                 </div>
