Updated About Us

--- a/views/about-us.hbs
+++ b/views/about-us.hbs
@@ -1,5 +1,13 @@
 <body>
-    <main id="about-us-content">
-        <!-- About Us sections will be dynamically loaded here -->
+    <header2 class="header2">
+        <h1>About Us</h1>
+    </header2>
+
+    <main class="wrapper">
+        <div class="container">
+            <main id="about-us-content">
+                <!-- About Us sections will be dynamically loaded here -->
+            </main>
+        </div>
     </main>
 </body>
