--- a/views/about-us.hbs
+++ b/views/about-us.hbs
@@ -5,8 +5,69 @@
 
     <main class="wrapper">
         <div class="container">
-            <main id="about-us-content">
-                <!-- About Us sections will be dynamically loaded here -->
+            <main id="about-us-container">
+                <h2 class="centered-title">Project Heads</h2>
+                <div class="team-grid">
+                    <div class="team-member">
+                        <div class="image-placeholder" style="background-image: url('../images/Corpuz.png');"></div>
+                        <h3 class="name">Nicole Ashley Corpuz</h3>
+                        <p class="description">Batch President, CATCH2T26</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="image-placeholder" style="background-image: url('../images/JCorpuz.jpg');"></div>
+                        <h3 class="name">John Exequiel Corpuz</h3>
+                        <p class="description">College President, CSG</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="image-placeholder" style="background-image: url('../images/Rawash.jpg');"></div>
+                        <h3 class="name">Sherihan Rawash</h3>
+                        <p class="description">College President, CSG</p>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </main>
+    <main class="wrapper">
+        <div class="container">
+            <main id="about-us-container">
+                <h2 class="centered-title">Our Team</h2>
+                <div class="team-grid">
+                    <div class="team-member">
+                        <div class="image-placeholder" style="background-image: url('/images/Kabiling.png');"></div>
+                        <h3 class="name">Simon Kabiling</h3>
+                        <p class="description">Product Owner</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="image-placeholder" style="background-image: url('/images/Guevara.jpg');"></div>
+                        <h3 class="name">Earl Guevara</h3>
+                        <p class="description">Scrum Master</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="image-placeholder" style="background-image: url('/images/Burias.jpg');"></div>
+                        <h3 class="name">Derek Buras</h3>
+                        <p class="description">Developer</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="image-placeholder" style="background-image: url('/images/Sacdalan.jpg');"></div>
+                        <h3 class="name">Justin Sacdalan</h3>
+                        <p class="description">Developer</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="image-placeholder" style="background-image: url('/images/Magadia.jpg');"></div>
+                        <h3 class="name">Rafael Magadia</h3>
+                        <p class="description">Designer</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="image-placeholder" style="background-image: url('/images/Tenerife.jpg');"></div>
+                        <h3 class="name">Amiel Tenerife</h3>
+                        <p class="description">QA</p>
+                    </div>
+                      <div class="team-member">
+                        <div class="image-placeholder" style="background-image: url('/images/Baniqued.jpg');"></div>
+                        <h3 class="name">Lourenz Baniqued</h3>
+                        <p class="description">QA</p>
+                    </div>
+                </div>
             </main>
         </div>
     </main>
