--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,9 +1,23 @@
-<main class="wrapper">
-  <div class="container">
-    <footer>
-      <p>&copy; 2024 De La Salle University. All rights reserved.</p>
-    </footer>
-    </body>
-    </html>
-  </div>
-</main>
+<html>
+  <body>
+      <main class="wrapper">
+          <div class="container">
+              <footer>
+                  <div class="footer-left">
+                      <div class="footer-images">
+                          <img src="images/DLSU.png" alt="Image 1" class="footer-image">
+                          <img src="images/USG.png" alt="Image 2" class="footer-image">
+                      </div>
+                  </div>
+                  <div class="footer-right">
+                      <div class="connect-container">
+                          <p class="connect-with-us">Connect With Us: </p>
+                          <a href="https://www.facebook.com/dlsu.usg" target="_blank" class="facebook-link"> Facebook</a>
+                      </div>
+                      <p>&copy; 2024 De La Salle University. All rights reserved.</p>
+                  </div>
+              </footer>
+          </div>
+      </main>
+  </body>
+</html>
