--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,10 +6,11 @@
                 <p>A centralized hub for research-related resources, guidelines, and information.</p>
                 <p>De La Salle University, as a research-based university, places high priority in producing relevant and accurate research outputs. This platform addresses the critical gap in data collection, enhancing the efficiency and reach of research efforts across the university.</p>
             </div>
-            <div class="image-placeholder"></div>
-        </div>
-        <div class="container">
-            <div class="image-placeholder"></div>
+            <div class="image-placeholder">
+                <a href="https://www.facebook.com/dlsu.usg" target="_blank">
+                    <img src="images/USG2.png" alt="Clickable Image">
+                </a>
+            </div>
         </div>
         <div class="container">
             <div class="announcements">
