--- a/public/css/main.css
+++ b/public/css/main.css
@@ -213,12 +213,22 @@ body {
   cursor: pointer;
   font-size: 16px;
 }
+
 .image-placeholder {
   width: 300px;
   height: 300px;
+  position: relative;
+  overflow: hidden;
   background-color: #555;
   border-radius: 20px;
 }
+
+.image-placeholder img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
 
 .form-container {
   display: flex;
