updated footer text

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -14,7 +14,7 @@
                           <p class="connect-with-us">Connect With Us: </p>
                           <a href="https://www.facebook.com/dlsu.usg" target="_blank" class="facebook-link"> Facebook</a>
                       </div>
-                      <p>&copy; 2024 De La Salle University. All rights reserved.</p>
+                      <p>&copy; DLSU University Student Government</p>
                   </div>
               </footer>
           </div>
