--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,14 +1,22 @@
 <body>
+    <header2 class="header2">
+        <h1>Profile</h1>
+    </header2>
+
     <main class="wrapper">
-        <div class="container">
-            <div class="content">
-                <h1>Profile</h1>
-                <p id="idNumber">ID number: Loading...</p>
-                <p id="fullName">Full Name: Loading...</p>
-                <p id="email">Email: Loading...</p>
-                <p id="points">Points: Loading...</p>
+        <div class="container profile-container">
+            <div class="profile-details-box">
+                <div class="profile-details">
+                    <div class="user-info">
+                        <h3 id="fullName">Full Name: Loading...</h3>
+                        <p id="idNumber">ID Number: Loading...</p>
+                        <p id="email">Email: Loading...</p>
+                    </div>
+                </div>
+                <div class="points-box">
+                    <p id="points">Loading...</p>
+                </div>
             </div>
-            <div class="image-placeholder"></div>
         </div>
     </main>
-</body> 
+</body>
